--- a/src/Convolution/convolution-matrices.html
+++ b/src/Convolution/convolution-matrices.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-            <title>Embedded SVG filter</title>
+        <title>Embedded SVG filter</title>
+        <script src="filters.js"></script>
         <style>
             * { font-family: sans-serif; }
-            p { font-size: 10em; font-weight: bold;  color: green; }
-            p { filter: url(#filter-emboss); }
+            p { margin-bottom: 0.4em; margin-left: 1em; vertical-align: middle; }
+            p, footer { margin-top: 0.4em; }
+            p { font-size: 12pt; font-weight: bold;  color: green; }
             svg { display: none; }
+            img { height: 128px; width: auto; }
+            figure, section, p { display: inline-block; }
+            figure { margin-left: 0; }
+            div { width: 1em; height: 1em; display: inline-block; border: solid black; border-width: 1px; }
         </style>
     </head>
 <body>
     <svg xmlns="http://www.w3.org/2000/svg">
-        <filter id="filter-smooth" style="color-interpolation-filters:sRGB;">
+        <filter id="Smooth" style="color-interpolation-filters:sRGB;">
             <feConvolveMatrix order="5 5" kernelMatrix="
                 1 1 1 1 1
                 1 1 1 1 1
@@ -19,66 +25,188 @@
                 1 1 1 1 1
                 1 1 1 1 1">
         </filter>
-        <filter id="filter-Roberts-Cross" style="color-interpolation-filters:auto;">
-            <feConvolveMatrix order="2 2" kernelMatrix="
-                0 -1
-                1 +0" />
-        </filter>
-        <filter id="filter-outline" style="color-interpolation-filters:linearRGB;">
-            <feConvolveMatrix order="3 3" kernelMatrix="
-                -1 -1 -1
-                -1 +8 -1
-                -1 -1 -1">
-        </filter>
-        <filter id="filter-edge" style="color-interpolation-filters:linearRGB;">
-            <feConvolveMatrix order="3 3" kernelMatrix="
-                0  1 0
-                1 -4 1
-                0  1 0">
-        </filter>
-        <filter id="filter-edge-enhanced" style="color-interpolation-filters:linearRGB;">
-            <feConvolveMatrix order="3 3" kernelMatrix="
-                +0 0 0
-                -1 1 0
-                +0 0 0">
-        </filter>
-        <filter id="filter-emboss" style="color-interpolation-filters:linearRGB;">
-            <feConvolveMatrix order="3 3" kernelMatrix="
-                -2 -1 0
-                -1 +1 1
-                 0 +1 2">
-        </filter>
-        <filter id="filter-Gaussian-blur" style="color-interpolation-filters:linearRGB;">
+        <filter id="Gaussian&nbsp;Blur" style="color-interpolation-filters:linearRGB;">
             <feConvolveMatrix order="3 3" kernelMatrix="
                 0 1 0
                 1 4 1
                 0 1 0">
         </filter>
-        <filter id="filter-blur" style="color-interpolation-filters:linearRGB;">
+        <filter id="Blur" style="color-interpolation-filters:linearRGB;">
             <feConvolveMatrix order="3 3" kernelMatrix="
                 0 2 0
                 2 4 2
                 0 2 0">
         </filter>
-        <filter id="filter-motion-blur" style="color-interpolation-filters:linearRGB;">
+        <filter id="Motion&nbsp;Blur" style="color-interpolation-filters:linearRGB;">
             <feConvolveMatrix order="3 3" kernelMatrix="
-                1 0 0
-                0 1 0
+                10 0 0
+                0 10 0
                 0 0 1">
         </filter>
-        <filter id="filter-antialising" style="color-interpolation-filters:linearRGB;">
+        <filter id="Average&nbsp;/&nbsp;Mean&nbsp;Filter" style="color-interpolation-filters:linearRGB;">
+            <feConvolveMatrix order="3 3" kernelMatrix="
+                0.111111 0.111111 0.111111
+                0.111111 0.111111 0.111111
+                0.111111 0.111111 0.111111">
+        </filter>
+        <filter id="Antialising" style="color-interpolation-filters:linearRGB;">
             <feConvolveMatrix order="3 3" kernelMatrix="
                 0 1 0
                 1 2 1
                 0 1 0">
         </filter>
-        <filter id="filter-antialising2" style="color-interpolation-filters:linearRGB;">
+        <filter id="Antialising-2" style="color-interpolation-filters:linearRGB;">
             <feConvolveMatrix order="3 3" kernelMatrix="
                 1 2 1
                 2 4 2
                 1 2 1">
         </filter>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <filter id="Sharpen" style="color-interpolation-filters:linearRGB;">
+            <feConvolveMatrix order="3 3" kernelMatrix="                
+                +0 -1 +0
+                -1 +5 -1
+                +0 -1 +0">
+        </filter>
+        <filter id="Intensivied&nbsp;Sharpen" style="color-interpolation-filters:linearRGB;">
+            <feConvolveMatrix order="3 3" kernelMatrix="                
+            -1 -1 -1
+            -1 +9 -1
+            -1 -1 -1">
+        </filter>
+        <filter id="Edge" style="color-interpolation-filters:linearRGB;">
+            <feConvolveMatrix order="3 3" kernelMatrix="
+                0  1 0
+                1 -4 1
+                0  1 0">
+        </filter>
+        <filter id="Enhanced&nbsp;Edge" style="color-interpolation-filters:linearRGB;">
+            <feConvolveMatrix order="3 3" kernelMatrix="
+                +0 0 0
+                -1 1 0
+                +0 0 0">
+        </filter>
+        <filter id="Emboss" style="color-interpolation-filters:linearRGB;">
+            <feConvolveMatrix order="3 3" kernelMatrix="
+                -2 -1 0
+                -1 +1 1
+                 0 +1 2">
+        </filter>
+        <filter id="Outline" style="color-interpolation-filters:linearRGB;">
+            <feConvolveMatrix order="3 3" kernelMatrix="
+                -1 -1 -1
+                -1 +8 -1
+                -1 -1 -1">
+        </filter>
+        <filter id="Top&nbsp;Sobel" style="color-interpolation-filters:linearRGB;">
+            <feConvolveMatrix order="3 3" kernelMatrix="
+                +1 +2 +1
+                +0 +0 +0
+                -1 -2 -1">
+        </filter>
+        <filter id="Bottom&nbsp;Sobel" style="color-interpolation-filters:linearRGB;">
+            <feConvolveMatrix order="3 3" kernelMatrix="
+                -1 -2 -1
+                +0 +0 +0
+                +1 +2 +1">
+        </filter>
+        <filter id="Right&nbsp;Sobel" style="color-interpolation-filters:linearRGB;">
+            <feConvolveMatrix order="3 3" kernelMatrix="
+                1 0 -1
+                2 0 -2
+                1 0 -1">
+        </filter>
+        <filter id="Left&nbsp;Sobel" style="color-interpolation-filters:linearRGB;">
+            <feConvolveMatrix order="3 3" kernelMatrix="
+                -1 0 1
+                -2 0 2
+                -1 0 1">
+        </filter>
+        <filter id="Roberts&nbsp;Cross&nbsp;Convolution-1" style="color-interpolation-filters:auto;">
+            <feConvolveMatrix order="2 2" kernelMatrix="
+                +0 +1
+                -1 +0" />
+        <filter id="Roberts&nbsp;Cross&nbsp;Convolution-2" style="color-interpolation-filters:auto;">
+            <feConvolveMatrix order="2 2" kernelMatrix="
+                0 -1
+                1 +0" />
+        </filter>
+        <filter id="Roberts&nbsp;Cross&nbsp;Convolution-3" style="color-interpolation-filters:auto;">
+            <feConvolveMatrix order="2 2" kernelMatrix="
+                -1 0
+                +0 1" />
+        </filter>
+        <filter id="Roberts&nbsp;Cross&nbsp;Convolution-4" style="color-interpolation-filters:auto;">
+            <feConvolveMatrix order="2 2" kernelMatrix="
+                1 +0
+                0 -1" />
+        </filter>
     </svg>
-    <p>Embedded SVG filter</p>
+    <table><tr>
+        <td><img alt="Bee" src="14.bee.webp"/></td>
+        <td><p spellcheck="false" contenteditable="true">Embedded SVG filter</p></td>
+    </tr></table>
+    <figure>
+        <select>
+            <option selected="true">128 px</option>
+            <option>256 px</option>
+            <option>512 px</option>
+            <option>1492 px</option>
+        </select>
+    </figure>
+    <section>
+        <select>
+            <option selected=true>&lt;No filters&gt;</option>
+        </select>
+    </section>
+    <section>
+        <select>
+            <option>4 pt</option>
+            <option>6 pt</option>
+            <option>8 pt</option>
+            <option>9 pt</option>
+            <option>10 pt</option>
+            <option>11 pt</option>
+            <option selected=true>12 pt</option>
+            <option>13 pt</option>
+            <option>14 pt</option>
+            <option>16 pt</option>
+            <option>18 pt</option>
+            <option>20 pt</option>
+            <option>22 pt</option>
+            <option>24 pt</option>
+            <option>28 pt</option>
+            <option>32 pt</option>
+            <option>36 pt</option>
+            <option>40 pt</option>
+            <option>48 pt</option>
+            <option>56 pt</option>
+            <option>64 pt</option>
+            <option>72 pt</option>
+            <option>144 pt</option>
+        </select>
+    </section>
+    <footer>
+    </footer>
 </body>
 </html>
