--- a/src/Convolution/convolution-matrices.html
+++ b/src/Convolution/convolution-matrices.html
@@ -57,27 +57,6 @@
                 2 4 2
                 1 2 1">
         </filter>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <filter id="Sharpen" style="color-interpolation-filters:linearRGB;">
             <feConvolveMatrix order="3 3" kernelMatrix="                
                 +0 -1 +0
@@ -98,7 +77,7 @@
         </filter>
         <filter id="Enhanced&ensp;Edge" style="color-interpolation-filters:linearRGB;">
             <feConvolveMatrix order="3 3" kernelMatrix="
-                +0 0 0
+                +0 0 07
                 -1 1 0
                 +0 0 0">
         </filter>
@@ -156,6 +135,15 @@
             <feConvolveMatrix order="2 2" kernelMatrix="
                 1 +0
                 0 -1" />
+        </filter>
+        <filter id="Unsharp&ensp;Cross&ensp;Mask" style="color-interpolation-filters:auto;">
+            <feConvolveMatrix order="5 5" kernelMatrix="
+                1 4 6 4 1
+                4 16 24 16 4
+                6 24 -476 24 6
+                4 16 24 16 4
+                1 4 6 4 1"
+                divisor="-256"/>
         </filter>
     </svg>
     <header>
