Convolution: simplification; Filters: introduced

--- a/src/Convolution/convolution-matrices.html
+++ b/src/Convolution/convolution-matrices.html
@@ -7,7 +7,7 @@
             * { font-family: sans-serif; }
             header { display: flex; align-items: center; }
             section { margin-left: 1em; }
-            p { margin-bottom: 0.4em; margin-left: 1em; vertical-align: middle; }
+            p { margin-bottom: 0.4em; margin-left: 1em; }
             p, footer { margin-top: 0.4em; }
             figure, section { margin: 0; margin-top: 0.4em; }
             svg { display: none; }
