--- a/src/Filters/filters.html
+++ b/src/Filters/filters.html
@@ -8,9 +8,10 @@
             section { margin-left: 1em; }
             p { margin-bottom: 0.4em; }
             p, footer { margin-top: 0.4em; }
+            p { filter: url(#Camo); }
             section { margin: 0; margin-top: 0.4em; }
             svg { display: none; }
-            p { font-size: 300%; font-weight: bold;  color: yellow; } /* in sync with selected */
+            p { font-size: 1200%; font-weight: bold;  color: darkgoldenrod; } /* in sync with selected */
             section, p { display: inline-block; }
             div { width: 1em; height: 1em; display: inline-block; border: solid black; border-width: 1px 0px 1px 1px; }
         </style>
@@ -56,7 +57,22 @@
             </feComponentTransfer> 
             <feComposite in="resultComponentTransfer" operator="in" in2="SourceGraphic" />
         </filter>
+        <filter id="Camo">
+            <feComposite result="resultSource" />
+            <feTurbulence baseFrequency="0.101" type="turbulence" numOctaves="1" seed="2" />
+            <feColorMatrix
+                values="0 0 0 0 0.8
+                        0 0 0 0 0.7
+                        0 0 0 0 0.6
+                        0 0 0 1 0.0"/>
+            <feComponentTransfer>
+                <feFuncA type="discrete" tableValues="0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1"/>
+            </feComponentTransfer>
+            <feComposite in2="resultSource"/>
+            <feComposite in2="SourceGraphic" operator="in" />
+        </filter>
     </svg>
+    <p spellcheck="false" contenteditable="true">Camo</p><br/>
     <p spellcheck="false" contenteditable="true">Embedded SVG filter</p><br/>
     <section>
         <select>
